adjust project structure and add rpc server for data services